ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: laravel-enterprisems-core
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: laravel-enterprisems-core
                port:
                  number: 8181
          - path: /quotations
            pathType: Prefix
            backend:
              service:
                name: laravel-quotations-microservice
                port:
                  number: 8182
          - path: /dotnet-app-test
            pathType: Prefix
            backend:
              service:
                name: dockerapptest
                port:
                  number: 80
